--- a/MarketplaceAPI_iOS/Localizable.xcstrings
+++ b/MarketplaceAPI_iOS/Localizable.xcstrings
@@ -51,6 +51,16 @@
         }
       }
     },
+    "%lld %@" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$lld %2$@"
+          }
+        }
+      }
+    },
     "%lld ₴" : {
       "localizations" : {
         "uk" : {
@@ -62,6 +72,7 @@
       }
     },
     "%lld item%@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -278,6 +289,7 @@
       }
     },
     "Cart summary" : {
+      "extractionState" : "stale",
       "localizations" : {
         "uk" : {
           "stringUnit" : {
@@ -413,17 +425,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Пошта"
-          }
-        }
-      }
-    },
-    "English" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "uk" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Англійська"
           }
         }
       }
